// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiLoadingContent is rendered 1`] = `
<span
  aria-label="aria-label"
  class="wuiLoadingContent testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`WuiLoadingContent lines 1 is rendered 1`] = `
<span
  class="wuiLoadingContent"
>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`WuiLoadingContent lines 2 is rendered 1`] = `
<span
  class="wuiLoadingContent"
>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`WuiLoadingContent lines 3 is rendered 1`] = `
<span
  class="wuiLoadingContent"
>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`WuiLoadingContent lines 4 is rendered 1`] = `
<span
  class="wuiLoadingContent"
>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`WuiLoadingContent lines 5 is rendered 1`] = `
<span
  class="wuiLoadingContent"
>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`WuiLoadingContent lines 6 is rendered 1`] = `
<span
  class="wuiLoadingContent"
>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`WuiLoadingContent lines 7 is rendered 1`] = `
<span
  class="wuiLoadingContent"
>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`WuiLoadingContent lines 8 is rendered 1`] = `
<span
  class="wuiLoadingContent"
>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`WuiLoadingContent lines 9 is rendered 1`] = `
<span
  class="wuiLoadingContent"
>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;

exports[`WuiLoadingContent lines 10 is rendered 1`] = `
<span
  class="wuiLoadingContent"
>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
  <span
    class="wuiLoadingContent__singleLine"
  >
    <span
      class="wuiLoadingContent__singleLineBackground"
    />
  </span>
</span>
`;
